--- a/week5/css/main.css
+++ b/week5/css/main.css
@@ -80,12 +80,12 @@ h3~p {
 /* Styling the navigation */
 nav ul a,
 nav ul a:link,
-nav ul, a:visited {
+nav ul a:visited {
     background-color: antiquewhite;
     /* Horizontal, vertical, blur, spread, color - matches with numbers below */
     box-shadow: -2px 2px 4px 2px black;
 }
-nav ul.current
+nav ul .current,
 nav ul a:hover, 
 nav ul a:focus {
      text-decoration: underline;
@@ -94,3 +94,38 @@ nav ul a:focus {
 nav ul a:active {
     box-shadow: 0 0 4px 2px black;
 }
+
+/* Position selectors */
+/* First-child and last-child */
+aside ul li:first-child {
+    font-weight: bold;
+}
+
+section ol li:last-child {
+    font-weight: bold;
+}
+
+/* Styling the table */
+table {
+    border-collapse: collapse;
+}
+
+/* nth-child selector - even/odd */
+tbody tr:nth-child(even) {
+    /* This is how we doe a hex-color value with 6 characters */
+    background-color: #d5836c;
+}
+
+table th:nth-child(n), 
+table td:nth-child(n) {
+    border: 1px solid #000;
+}
+/* Using formula in nth-child selector */
+table td:nth-child(2n+1) {
+    background-color: rgba(0, 0, 0, 0.2);
+}
+
+/* Specificity */
+/* Formula: inline style, id, class, tag-name */
+/* eg: footer - 1, body footer - 2, site-header - 10, body footer class - 12 */
+/* Never do in-line styles where something like body footer and background colour are on the same line*/
