--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -1,3 +1,13 @@
 body { 
-    
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 18px
+
 }
+
+header, footer {
+    background-color: plum; 
+}
+
+.site-title {
+    
+} 
