--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -5,9 +5,36 @@ body {
 }
 
 header, footer {
-    background-color: plum; 
+    background-color: rgb(203, 121, 135);
 }
 
 .site-title {
-    
+    color: antiquewhite;
+    text-decoration: wheat;
 } 
+
+#my-image {
+    box-shadow: 0px 0px 2px 1px black;
+
+}
+
+#my-hobbies {
+    list-style-type: square; 
+}
+
+#my-hobbies :nth-child(odd){
+    background-color: rgb(251, 236, 217);
+}
+
+nav a { 
+    text-decoration: none;
+    background-color: blanchedalmond;
+    border: 2px solid pink;
+}
+
+nav a:hover {
+    background-color: bisque;
+}
+nav a:focus {
+    background-color:hwb(33 51% 22%) 
+}
