--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -6,6 +6,8 @@ Shortcut for adding a comment is ctrl + /
  body {
     font-family: Arial, Helvetica, sans-serif;
     color: darkslategray;
+    /* Adding a background image */
+    background-image: url(../images/white_brick_wall.png);
  }
 
  h1 {
@@ -34,7 +36,10 @@ nav ul a {
 /* Selecting element with ID value */
 /* As of best practice, avoid using IDs for styles */
 #treatoftheweek {
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
+    /* color image repeat position x position y */
+    background: cadetblue url(../images/bread.jpg) no-repeat center;
+    background-size: cover;
 }
 
 .blue-link {
@@ -54,7 +59,11 @@ nav ul a {
 /* Combinators */
 /* direct child selector = will only select the direct child of the parent */
 article>p {
-    font-size: 14px;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 1.5;
+    text-transform: lowercase;
+    text-align: center;
 }
 
 /* Adjacent sibling selector - selects the element that is the very next sibling to the selected elemen, if any exist */
