--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -31,6 +31,8 @@ nav ul {
 nav ul a {
     color: darkslategray;
     text-decoration: none;
+    font-size: 1.5rem;
+    /* 1.5rem (html font-size) = 16px * 1.5 = 24px */
 }
 
 /* Selecting element with ID value */
@@ -40,6 +42,14 @@ nav ul a {
     /* color image repeat position x position y */
     background: cadetblue url(../images/bread.jpg) no-repeat center;
     background-size: cover;
+    font-size: 1.25rem;
+    /* 1.25 * 16 px = 20px */
+    padding: 1em;
+    /* 1 * 20px (element font size) = 20px */
+    /* viewport based units */
+    /* width: 100vw;  */
+    height: 100vh;
+    width: 50%;
 }
 
 .blue-link {
