--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -2,15 +2,15 @@ body {
     margin: auto;
     width: 1000px;
     background-color: #aad4cf;
-    font-family: sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
 }
+/* Adds styling to body and chooses Arial, Helvetica font family */
 
 .container {
     background-color: #d4eae9;
-    margin: 1200 auto;
-    width: 1000px;
-    padding-left: 10px;
-    padding-right: 10px;
+    margin: 0 auto;
+    max-width: 1200px;
     padding-bottom: 10px;
 }
 
@@ -25,17 +25,14 @@ h1 {
 }
 
 header img {
-    display: inline;
-    width: 1000px;
-    padding: 30;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;
+    width: 100%;
+    padding: 0;
 }
 
 
 h2 {
     font-size: 35px;
-    font-weight: 20px;
 }
 
 
@@ -43,8 +40,15 @@ nav ul {
     display: grid;
     grid-template-columns: auto auto auto;
     list-style-type: none;
-    text-decoration: none;
+
 }
+
+a {
+    text-decoration: none;
+    color: black;
+    font-size: 25px;
+    font-weight: 500;
+    }
 
 
 nav ul li {
@@ -52,7 +56,6 @@ nav ul li {
     display: inline;
     text-align: center;
     text-transform: uppercase;
-    font-size: 20px;
     padding-top: 0;
     padding-left: 120px;
     padding-right: 80px;
@@ -60,24 +63,40 @@ nav ul li {
 }
 
 .vertical_line {
-    border-right: solid;
-    border-left: solid;
+    border-right: 2px solid black;
+    border-left: 2px solid black;
 }
 
-.body_image {
+.body-image {
     float: left;
-    width: 25%;
+    max-width: 28%;
+    max-height: 28%;
     margin-right: 0.5rem;
     margin-bottom: 2rem;
     padding: 5px;
+   
+}
+
+.container-main-content {
+    padding: 2.5%;
 }
 
 .form {
-    border: solid;
+    border: 2px solid;
     width: 100%;
     padding: 10px 15px;
-    margin: 8px 0;
+    margin: 9px 0;
     box-sizing: border-box;
+}
+
+.contact-form {
+    display: block;
+}
+
+.textarea {
+    width: 100%;
+    resize: none;
+    outline: #949a9a;
 }
 
 .form_spacing {
@@ -88,15 +107,20 @@ nav ul li {
 button {
     border: 1px solid;
     text-align: right;
+    font-weight: 550;
     background-color:#d4eae9;
     text-transform: uppercase;
     padding: 0.5rem;
+    margin-top: 1.5em;
 }
 
 footer {
     text-align: right;
-    padding-top: 12px;
-    padding-bottom: 18px;
+    font-weight: 550;
+    font-size: 15px;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    padding-right: 25px;
 }
 
 
