week 10 adds to main.css

--- a/week10/css/main.css
+++ b/week10/css/main.css
@@ -85,7 +85,7 @@ p {
     /* margin 0 auto to centre */
     padding: 1em
 }
-/*********HEADER*********/
+/*******************HEADER***********************/
 .mobile-logo {
     max-width: 150px;
 }
@@ -108,6 +108,27 @@ p {
     text-align: center;
     text-transform: uppercase;
 }
+/*****************NAVIGATION************************/
+.nav-list li {
+    border-bottom: 1px solid grey;
+    text-align: center;
+}
+
+/* LoVe HAte */
+.nav-list a,
+.nav-list a:link,
+.nav-list a:visited {
+    display: block;
+    padding: 1em 0;
+    text-decoration: none;
+}
+
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current {
+    background-color: #00add8;
+    color: inherit;
+}
 
 .btn {
     /* styling the button */
@@ -123,9 +144,22 @@ p {
 .btn:focus {
     background-color: #00add8;
     color: inherit;
-
 }
-/************FOOTER STYLES************/
+
+/*******************ACTION SECTION*************************/
+
+.actions-list {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.actions-list li {
+    max-width: 50%;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.5rem;
+}
+/*******************FOOTER STYLES***************************/
 .site-footer {
     margin-top: 20px;
     padding: 20px 0;
@@ -136,9 +170,9 @@ p {
     text-align: right;
 }
 
-/**********************************
+/***************************************************
         DESKTOP STYLES
-***********************************/
+***************************************************/
 @media screen and (min-width:600px) {
     html { 
         font-size: 16px;
@@ -158,8 +192,21 @@ p {
     .banner h1 {
         color: white;
     }
-    
-    /**************APP SECTION***************/
+    /******************NAVIGATION*******************/
+    .nav-list {
+        display: flex;
+    }
+    .nav-list li {
+        flex: 1;
+        border: none;
+        border-right: 1px solid grey;
+
+    }
+
+    .nav-list li:last-child {
+        border:none;
+    }
+    /*****************APP SECTION*******************/
     .app img {
         width: 40%;
         float: left;
@@ -169,7 +216,15 @@ p {
     .app .btn {
         float: right;
     }
-
-    
-
+  
 }  
+
+/*************************************************
+                MEDIA QUERY 800px
+*************************************************/
+
+@media screen and (min-width:800px) {
+    .actions-list li {
+        max-width: 20%;
+    }
+}
