--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -112,7 +112,7 @@ nav ul li {
 }
 /* Adjusts size of text area and the outline */
 
-.form_spacing {
+.formspacing {
     margin-top: 1rem;
     margin-bottom: 1rem;
 }
