--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -5,31 +5,34 @@ html {
 
 /* Assigns font size to headers */
 h1 {
-  font-size: 4.45em;
-  text-align: left;
+  font-size: 3em;
   font-weight: bold;
   color: #fff;
 }
 
 h2 {
-  font-size: 1.5em;
-  font-weight: bold;
+  font-size: 2.5em;
+  font-weight: bolder;
   color: #222;
 }
 
 h3 {
-  font-size: 1.2em;
-  font-weight: bold;
+  font-size: 2em;
+  font-weight: bolder;
   color: #222;
 
 }
 
 /* Calls all the headings and assigns them a margin so they don't overlap */
-h1,
+h1 {
+  margin: 0;
+  line-height: 1.5em;
+}
+
 h2,
 h3,
 h4 {
-  margin: 1.5em;
+  margin: 0.5em;
 }
 
 /* The maximum width of the container is set to 1200 px, centering the container */
@@ -49,11 +52,9 @@ h4 {
 
 /* Adds the transparent box to main banner */
 .welcome {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.4);
   color: #fff;
-  min-height: 200px;
   margin: 0 auto;
-  width: 100%;
 }
 
 /* Gives both the nav bar and the footer a black background, and white text */
@@ -75,7 +76,7 @@ nav {
 /* Removes the underline from the nav text  */
 nav ul li {
   list-style-type: none;
-  padding: none;
+  padding: 0;
   margin:0;
 }
 
@@ -99,11 +100,11 @@ nav ul li a {
 }
 
 /* Stylizes the search button for the nav bar */
-form button {
-  border: 2px;
-  background-color: #222;
+
+.nav-form button {
   color: #c78c06;
-  border-color: #c78c06;
+  background: transparent;
+  border:1px solid #c78c06;
 }
 
 section {
@@ -114,11 +115,12 @@ footer {
   padding: 10px 50px;
 }
 
-/* remove the underline of the links in navigation bar and footer*/
+/* Adds underline to the footer link, "Unsplash"*/
 footer a {
-  text-decoration: none;
+  color: #c78c06;
 }
 
+/* Removes underline from the nav links */
 nav ul li a {
   text-decoration: none;
 
@@ -126,7 +128,7 @@ nav ul li a {
 
 /* Adds 30% opacity to the background box */
 .maindiv {
-  padding: 10px;
+  padding: 0;
   color: #fff;
   min-height: 200px;
 
@@ -138,6 +140,7 @@ nav ul li a {
 
 /*Adds the "connect with us" button with colour  */
 .welcome button {
+  padding: 20px 20px;
   margin: 10px 0;
   text-align: center;
   text-decoration: none;
@@ -145,7 +148,6 @@ nav ul li a {
   background-color: #c78c06;
   color: #222;
 }
-
 
 /* Adding hover colour to the nav bar */
 nav ul li a:hover {
@@ -194,13 +196,11 @@ header {
 
 /* Adds the text for vision button and centers it */
 .vision button {
-  margin: 10px 0;
+  padding: 20px 20px;
   text-align: center;
-  border: 0;
-  display: block;
+  text-decoration: none;
   background-color: #222;
   color: #fff;
-  padding: 10px 15px;
   border: 1px solid#c78c06;
 }
 
@@ -212,6 +212,7 @@ header {
   color: #fff;
   padding: 20px 70px;
   background-color: #ffe6ac;
+  line-height: 2em;
 }
 
 /* Adds the transparent boxes like in the welcome banner */
@@ -219,7 +220,6 @@ header {
   padding: 10px;
   background-color: rgba(2, 2, 2, 0.3);
   color: #fff;
-  min-height: 200px;
 }
 
 /* Calls the vision header forward to assign it a colour */
@@ -227,6 +227,7 @@ header {
   color: #fff;
 }
 
+.our-team h2,
 .our-team h3 {
   font-weight: 700;
   color: #222;
@@ -254,7 +255,6 @@ nav form {
 
 .card {
   background-color: #ffe6ac;
-  margin-bottom: 10px;
   color: #222;
 }
 
@@ -321,6 +321,7 @@ th {
 
 .card h4 {
   margin: 0 auto;
+  border-bottom: 1px solid #c78c06;
 }
 
 /* Makes all the buttons black and the arrow white, and centered */
@@ -346,6 +347,7 @@ th {
 /* Begins styling for desktop */
 @media screen and (min-width:760px) {
 
+  /* Uses flex for nav bar and adds space between, making it look neat */
   nav,
   .navigation form {
     display: flex;
@@ -353,6 +355,15 @@ th {
     padding: 10px 70px;
   }
 
+  /* Displays everything and stretches the contents */
+    nav form button,
+    nav form input,
+    nav ul li a {
+      display: inline-block;
+      align-content: stretch;
+      justify-content: stretch;
+    }
+  
   .logo {
     display: inline-block;
   }
@@ -362,17 +373,9 @@ th {
   }
 
 
-  .about-us img,
-  nav form button,
-  nav form input,
-  nav ul li a {
-    display: inline-block;
-    align-content: stretch;
-    justify-content: stretch;
-  }
+  /* Stretches the contents of the nav bar with flex grow 1 so it uses 100% of the space, all spaced evenly */
 
-
-  /* stretches the contents of the nav bar with flex grow 1 so it uses 100% of the space, all spaced evenly */
+  /* Begins getting very specific with my comments to remember the steps */
   nav ul {
     display: flex;
     align-content: stretch;
@@ -426,7 +429,7 @@ th {
     grid-template-columns: repeat(2, 1fr);
   }
 
-  /* Makes the Bob profile image as the last element in grid*/
+  /* Makes the Bob image as the last element in grid*/
   .our-team .bob img {
     order: 1;
   }
